[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-refiner"
version = "1.0.0"
description = "Production-ready Post-Quantum Cryptography framework for securing LLM fine-tuning datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Quantum Security Team", email = "security@quantum-refiner.io"}
]

keywords = ["pqc", "post-quantum", "cryptography", "kyber", "dilithium", "llm", "security"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "liboqs-python>=0.7.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.80.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

torch = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
]

[project.scripts]
quantum-refiner = "quantum_refiner.cli.main:cli"

[tool.setuptools]
packages = ["quantum_refiner"]

[tool.setuptools.package-data]
quantum_refiner = ["config/*.yaml", "examples/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=quantum_refiner --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["quantum_refiner"]
omit = ["*/tests/*"]
